# Ouija-Game

./: .gitattributes  .gitignore  Linux_Ollama_Setup  Ollama_Setup.py  README.md  ollama-plan.md  prompts-used.md  refinements-changes.md  setup.md
Assets/: PlayerActions.inputactions
Assets/BK_AlchemistHouse/Scenes/: Scene.unity  Scene_Items.unity
Assets/Editor/: PostBuildCopy.cs
Assets/OurAssets/: AudioMixer.mixer
Assets/OurAssets/Materials/: GrassLayer.terrainlayer  M_Black.mat  M_CryptexButton.mat  M_EndTerrain.mat  M_WindowDark.mat  PentagramLayer.terrainlayer
Assets/OurAssets/Prefabs/: Candle.prefab  CandleLit.prefab  CandleUnlit.prefab  Cryptex.prefab  TarotCard.prefab
Assets/OurAssets/Scripts/: GameManager.cs  MinigameManager.cs  OuijaBoard.cs  OwnUtils.cs  SpiritNameManager.cs  StoryManager.cs  TempCacheManager.cs
Assets/Resources/Prompts/: OuijaSystemPrompt.j2  SessionLorePrompt.j2  StoryPrompt.j2
Assets/Scenes/: EndScene.unity  HouseScene.unity  MainMenu.unity  RuneScene.unity  SampleScene.unity  StoryScene.unity  TarotScene.unity
Assets/Settings/: PC_RPAsset.asset  SampleSceneProfile.asset  UniversalRenderPipelineGlobalSettings.asset
Assets/ThirdPartyAssets/Cemetery Kit V1.25/: Grave Stones UV.mat
Assets/ThirdPartyAssets/Font/: Cinzel-Bold SDF.asset
Assets/ThirdPartyAssets/OuijaBoard/: Material.001.mat  Material.002.mat  Planche Ouija.fbx
CursorConversationHistory/: cursor-conversation-log.md
OuijaSetup/: CMakeLists.txt  OuijaSetup.cpp
ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  TagManager.asset
(+299 files in other folders)
